# archimedes

./: .gitattributes  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  about.html  broadcasting_bug_description.md  community.html  genindex.html  getting-started.html  gotchas.html  index.html  licensing-model.html  objects.inv  py-modindex.html  pyproject.toml  pytrees.html  requirements-legacy.txt  search.html  searchindex.js  under-the-hood.html
.github/workflows/: ci.yaml  pages.yaml  security.yaml
_sources/notebooks/deployment/: deployment00.md.txt
_sources/notebooks/multirotor/: multirotor06.md.txt
dev/: TESTING.md  visual_style_guide.md
docs/: CNAME  Makefile  about.md  convert_notebooks.sh  nbconvert_post.py
docs/source/: about.md  community.md  conf.py  control-flow.md  getting-started.md  gotchas.md  index.rst  licensing-model.md  modular-design.md  pytrees.md  quickstart.md  roadmap.md  trees.md  under-the-hood.md
docs/source/_static/: custom.css
docs/source/arduino_codegen/: arduino_codegen.ino  main.c  make_pid.py
docs/source/blog/: index.md
docs/source/notebooks/: multirotor.py  (+12 more)
doctrees/: about.doctree  community.doctree  environment.pickle  getting-started.doctree  gotchas.doctree  index.doctree  licensing-model.doctree  pytrees.doctree  quickstart.doctree  roadmap.doctree  under-the-hood.doctree
doctrees/reference/: index.doctree
examples/: broadcasting_bug_example.py
examples/cartpole/: cartpole.py  finite-horizon.ipynb  swingup.ipynb  sysid.ipynb
examples/f16/: f16_aero.py  f16_engine.py  f16_plant.py  test_f16.py  test_f16_euler.py  textbook_f16.py
examples/multirotor/: multirotor.py  multirotor02.md  multirotor03.md  multirotor04.md  multirotor05.md  quadrotor.ipynb  test_multirotor.py
examples/rocket/: engine-model.ipynb  engine_model.py  load_cea.py  modred.py  test_modred.py
examples/sysid/: generate_data.py  sysid01.ipynb  sysid02.ipynb  sysid03.ipynb  sysid04.md
examples/trajopt/: 01-block-push.ipynb  02-cart-pole.ipynb  03-hohmann.ipynb  04-moon-landing.ipynb  05-orbit-transfer.ipynb
html/: .buildinfo  quickstart.html  roadmap.html  searchindex.js
html/reference/: index.html
notebooks/multirotor/: multirotor00.html  multirotor01.html  multirotor02.html  multirotor06.html
src/archimedes/: __init__.py  discretize.py  error.py  theme.py  typing.py
test/: test_autodiff.py  test_codegen.py  test_discretize.py  test_tree.py
test/codegen/: test_codegen.py
test/core/: test_array.py  test_array_ops.py  test_broadcasting.py  test_interp.py
test/experimental/: test_flight_dynamics.py  test_ode_discretization.py
test/observers/: _test_benchmark.py  conftest.py  test_ekf.py  test_kalman_filters.py  test_ukf.py
test/optimization/: test_minimize.py  test_qpsol.py  test_root.py
test/optimize/: test_least_squares.py  test_lm.py  test_minimize.py
test/signal/: test_tf2ss.py
test/simulation/: test_ode_discretization.py  test_odeint.py
test/spatial/: test_euler.py  test_quaternion.py  test_rigid_body.py  test_rotation.py  test_rotations.py
test/state_estimation/: test_benchmark.py  test_ekf.py  test_kf.py  test_ukf.py
test/sysid/: test_lm.py  test_pem.py  test_timeseries.py
test/tree/: test_tree.py
(+300 files in other folders)
