[project]
name = "archimedes"
version = "0.1.0"
description = "Python framework for symbolic/numeric modeling and simulation"
readme = "README.md"
authors = [
    { name = "Jared Callaham", email = "jared.callaham@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "casadi>=3.6.7",
    "numpy>=2.2.4",
    "scipy>=1.15.2",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
all = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "myst-parser[linkify]>=4.0.1",
    "nbconvert>=7.16.6",
    "nbmake>=1.5.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
    "sphinx>=8.2.3",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
]
exclude = ["src/archimedes/experimental/*"]

[tool.ruff.lint.isort]
known-first-party = ["archimedes"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "archimedes.experimental.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["archimedes"]
omit = ["*/archimedes/experimental/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 100